--- a/package.json
+++ b/package.json
@@ -16,7 +16,5 @@
     "url": "https://gitlab.com/1393679430/jiagou_kaikeba/issues"
   },
   "homepage": "https://gitlab.com/1393679430/jiagou_kaikeba#readme",
-  "dependencies": {
-    "typescript": "^4.9.5"
-  }
+  "dependencies": {}
 }
